--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="whole_page">
       <h2>Videos to watch before bed</h2>
       <aside>
-        <div><video src="intro.mp4" autoplay controls loop></video></div>
+        <div></div>
       </aside>
     </main>
     <footer>
