--- a/index.html
+++ b/index.html
@@ -3,24 +3,76 @@
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=0.50"> <!--phone optimization-->
     <link rel="stylesheet" href="cssF.css">
-    <title>Heil Hitler</title>
+    <title>Meals Ready to Eat</title>
   </head>
   <body>
     <header>
       <nav>
           <ul>
-            <li><a class="linkNav" href="index.html">Home</a></li>
-            <li><a class="linkNav" href="page2.html">Bing</a></li>
-            <li><a class="linkNav" href="page3.html">Recipes</a></li>
+            <li><a class="linkNav" href="page2.html">CONTACT</a></li>
+            <li><a class="linkNav" href="index.html"><img src="mre.png" alt="HOME"/></a></li>
           </ul>
       </nav>
     </header>
-
     <main class="whole_page">
-      <h2>Videos to watch before bed</h2>
-      <aside>
-        <div></div>
-      </aside>
+      <section class="card_container">
+        <div class="card_margin">
+          <a class="linkNav" href="page2.html">
+            <div class="card">
+              <div class="card_image"></div>
+              <p class="card_info">huine muine</p>
+            </div>
+          </a>
+        </div>
+        <div class="card_margin">
+          <a class="linkNav" href="page2.html">
+            <div class="card">
+              <div class="card_image"></div>
+              <p class="card_info">huine muine</p>
+            </div>
+          </a>
+        </div>
+        <div class="card_margin">
+          <a class="linkNav" href="page2.html">
+            <div class="card">
+              <div class="card_image"></div>
+              <p class="card_info">huine muine</p>
+            </div>
+          </a>
+        </div>
+        <div class="card_margin">
+          <a class="linkNav" href="page2.html">
+            <div class="card">
+              <div class="card_image"></div>
+              <p class="card_info">huine muine</p>
+            </div>
+          </a>
+        </div>
+        <div class="card_margin">
+          <a class="linkNav" href="page2.html">
+            <div class="card">
+              <div class="card_image"></div>
+              <p class="card_info">huine muine</p>
+            </div>
+          </a>
+        </div>
+        <div class="card_margin">
+          <a class="linkNav" href="page2.html">
+            <div class="card">
+              <div class="card_image"></div>
+              <p class="card_info">huine muine</p>
+            </div>
+          </a>
+        </div>
+        <div class="card_margin">
+          <a class="linkNav" href="page2.html">
+            <div class="card">
+              <div class="card_image"></div>
+              <p class="card_info">huine muine</p>
+            </div>
+          </a>
+        </div>
+      </section>
     </main>
     <footer>
     </footer>
