--- a/page2.html
+++ b/page2.html
@@ -9,15 +9,12 @@
     <header>
       <nav>
           <ul>
-            <li><a class="linkNav" href="index.html">Home</a></li>
-            <li><a class="linkNav" href="page2.html">Food</a></li>
-            <li><a class="linkNav" href="page3.html">CO2</a></li>
+            <li><a class="linkNav" href="page2.html">CONTACT</a></li>
+            <li><a class="linkNav" href="index.html"><img src="mre.png" alt="HOME"/></a></li>
           </ul>
       </nav>
     </header>
-
     <main class="whole_page">
-      <h2>kad zajabniau valgyt mesa ar grauzt lapus</h2>
     </main>
     <footer>
     </footer>
